Renamed doc/index.html to doc/index.html.in.
index.html is generated by configure with replacing @PACKAGE_VERSION@.

--- a/doc/index.html.in
+++ b/doc/index.html.in
@@ -2,7 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <link rel="stylesheet" href="./default.css" type="text/css"/>
-<title>Yog 0.0.6 documentation</title>
+<title>Yog @PACKAGE_VERSION@ documentation</title>
 <style>
 .biglink {
   font-size: 1.3em;
@@ -10,8 +10,8 @@
 </style>
 </head>
 <body>
-<div class="header">Yog 0.0.6 documentation</div>
-<h1>Yog 0.0.6 documentation</h1>
+<div class="header">Yog @PACKAGE_VERSION@ documentation</div>
+<h1>Yog @PACKAGE_VERSION@ documentation</h1>
 <table align="center" border="0" style="padding: 10px;"><tbody>
   <tr><td><a class="biglink" href="using/index.html">Using Yog</a></td></tr>
   <tr><td><a class="biglink" href="tutorial.html">Tutorial</a></td></tr>
