Renamed scripts to generate encoding tables, and changed tools/dist to run on FeeeBSD.

--- a/Makefile.am
+++ b/Makefile.am
@@ -52,7 +52,7 @@ install:
 	done
 
 pkg:
-	tools/dist --python=$(PYTHON) $(ARCHIVE)
+	tools/dist -p $(PYTHON) $(ARCHIVE)
 
 pkgcheck:
 	tools/distcheck $(ARCHIVE)
