--- a/corgi/configure.ac
+++ b/corgi/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.63])
-AC_INIT([corgi], [0.0.1], [SumiTomohiko@neko-daisuki.ddo.jp])
+AC_INIT([corgi], [0.0.2], [SumiTomohiko@neko-daisuki.ddo.jp])
 AM_INIT_AUTOMAKE([dist-bzip2])
 AC_CONFIG_SRCDIR([src/corgi.c])
 AC_CONFIG_HEADERS([include/corgi/config.h])
@@ -38,7 +38,8 @@ fi
 AC_CONFIG_FILES([Makefile
                  src/Makefile
                  tests/Makefile
-                 rc])
+                 rc
+                 doc/conf.py])
 AC_OUTPUT
 
 echo "Replacing directive names..."
