Added tests for UnionClass and StructClass.

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -5,7 +5,10 @@ CC = @CC@
 SOEXT = @SOEXT@
 
 PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
-       test_lib.$(SOEXT)
+       test_lib.$(SOEXT) test_Struct690.$(SOEXT) test_Struct700.$(SOEXT) \
+       test_Struct720.$(SOEXT) test_Struct730.$(SOEXT) test_Struct740.$(SOEXT) \
+       test_Struct705.$(SOEXT) test_Union030.$(SOEXT) test_Union040.$(SOEXT) \
+       test_Union050.$(SOEXT)
 CFLAGS = -shared -I.. -I../include -Wall -Werror -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
@@ -14,17 +17,10 @@ all: lib
 
 lib: $(PKGS)
 
-test_package4.$(SOEXT): test_package4.c Makefile
-	$(CC) -o $@ $(CFLAGS) test_package4.c $(LIBS)
+.SUFFIXES: .$(SOEXT)
 
-test_package5.$(SOEXT): test_package5.c Makefile
-	$(CC) -o $@ $(CFLAGS) test_package5.c $(LIBS)
-
-test_package6.$(SOEXT): test_package6.c Makefile
-	$(CC) -o $@ $(CFLAGS) test_package6.c $(LIBS)
-
-test_lib.$(SOEXT): test_lib.c Makefile
-	$(CC) -o $@ $(CFLAGS) test_lib.c $(LIBS)
+.c.$(SOEXT):
+	$(CC) -o $@ $(CFLAGS) $< $(LIBS)
 
 clean:
 	find . -name "core*" -print0 | xargs -0 rm -f
