--- a/.gitignore
+++ b/.gitignore
@@ -316,6 +316,7 @@ src/miniyog
 src/object.inc
 src/parser.c
 src/parser.out
+src/set.inc
 src/shift_jis2yog_hankaku.inc
 src/shift_jis2yog_zenkaku.inc
 src/string.inc
