--- a/configure.ac
+++ b/configure.ac
@@ -87,11 +87,11 @@ AM_PATH_PYTHON()
 
 AC_DEFINE_UNQUOTED([PREFIX], ["$prefix"], [Define install directory])
 
-AC_CONFIG_FILES([Makefile src/Makefile tools/lemon/Makefile tests/Makefile
-                 ext/Makefile lib/Makefile doc/Makefile installer.nsi
-                 ext/concurrent/Makefile ext/yaml/Makefile ext/zip/Makefile
-                 ext/Makefile.common ext/uname/Makefile vim/Makefile
-                 doc/index.html])
+AC_CONFIG_FILES([Makefile doc/Makefile doc/index.html ext/Makefile
+                 ext/Makefile.common ext/concurrent/Makefile ext/uname/Makefile
+                 ext/yaml/Makefile ext/zip/Makefile installer.nsi lib/Makefile
+                 lib/c/Makefile src/Makefile tests/Makefile tools/lemon/Makefile
+                 vim/Makefile])
 if test "${cunit}" == "yes"
 then
     AC_CONFIG_FILES([tests/gc/Makefile])
