Implemented lib/c/Makefile.am to generate grammar.yg from grammar.yogram.

--- a/.gitignore
+++ b/.gitignore
@@ -276,6 +276,7 @@ lib/Makefile
 lib/Makefile.in
 lib/c/Makefile
 lib/c/Makefile.in
+lib/c/grammar.yg
 libffi/Makefile
 libffi/fficonfig.h
 libffi/include/Makefile
