Improved lib/c/Makefile.am to regenerate .yg when bin/lalr1gram.yog is updated.

--- a/lib/c/Makefile.am
+++ b/lib/c/Makefile.am
@@ -1,10 +1,12 @@
 
 YOG = $(top_srcdir)/src/yog-generational
+LALR1GRAM = $(top_srcdir)/bin/lalr1gram.yog
+SRC = grammar.yogram
 
 bin_PROGRAMS = grammar.yg
-grammar_yg_SOURCES = grammar.yogram
+grammar_yg_SOURCES = $(SRC)
 
-grammar.yg: grammar.yogram
-	$(YOG) --young-heap-size=32M $(top_srcdir)/bin/lalr1gram.yog $@ $<
+grammar.yg: $(SRC) $(LALR1GRAM)
+	$(YOG) --young-heap-size=32M $(LALR1GRAM) $@ $(SRC)
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
