--- a/.gitignore
+++ b/.gitignore
@@ -339,6 +339,7 @@ tests/gc/Makefile.in
 tests/gc/test-mark-sweep-compact
 tests/gram.yg
 tests/run_h2yog.yg
+tests/test_h2yog.yg
 tests/test_package4.ilk
 tests/test_package5.ilk
 tests/test_package6.ilk
