Improved h2yog package etc. to accept typedef'ed integer datatypes.

--- a/.gitignore
+++ b/.gitignore
@@ -335,11 +335,11 @@ stamp-h1
 tags
 tests/Makefile
 tests/TestO.db
-tests/datatype.h
 tests/gc/Makefile
 tests/gc/Makefile.in
 tests/gc/test-mark-sweep-compact
 tests/gram.yg
+tests/h2yog.h
 tests/run_h2yog.yg
 tests/test_h2yog.yg
 tests/test_package4.ilk
