--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -3,12 +3,37 @@ top_srcdir = @top_srcdir@
 prefix = @prefix@
 CC = @CC@
 SOEXT = @SOEXT@
+PYTHON = @PYTHON@
 
 PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
        test_lib.$(SOEXT) test_Struct690.$(SOEXT) test_Struct700.$(SOEXT) \
        test_Struct720.$(SOEXT) test_Struct730.$(SOEXT) test_Struct740.$(SOEXT) \
        test_Struct705.$(SOEXT) test_Union030.$(SOEXT) test_Union040.$(SOEXT) \
-       test_Union050.$(SOEXT) empty.$(SOEXT)
+       test_Union050.$(SOEXT) empty.$(SOEXT) test_func0.$(SOEXT) \
+       test_func10.$(SOEXT) test_func20.$(SOEXT) test_func30.$(SOEXT) \
+       test_func40.$(SOEXT) test_func50.$(SOEXT) test_func60.$(SOEXT) \
+       test_argtype_char.$(SOEXT) test_argtype_int.$(SOEXT) \
+       test_argtype_long.$(SOEXT) test_argtype_long_int.$(SOEXT) \
+       test_argtype_long_long.$(SOEXT) test_argtype_long_long_int.$(SOEXT) \
+       test_argtype_long_signed.$(SOEXT) test_argtype_short.$(SOEXT) \
+       test_argtype_short_int.$(SOEXT) test_argtype_signed_char.$(SOEXT) \
+       test_argtype_signed_int.$(SOEXT) test_argtype_signed_long.$(SOEXT) \
+       test_argtype_signed_long_long.$(SOEXT) \
+       test_argtype_signed_short.$(SOEXT) test_argtype_unsigned_char.$(SOEXT) \
+       test_argtype_unsigned_int.$(SOEXT) test_argtype_unsigned_long.$(SOEXT) \
+       test_argtype_unsigned_long_long.$(SOEXT) \
+       test_argtype_unsigned_short.$(SOEXT) test_rettype_char.$(SOEXT) \
+       test_rettype_int.$(SOEXT) test_rettype_long.$(SOEXT) \
+       test_rettype_long_int.$(SOEXT) test_rettype_long_long.$(SOEXT) \
+       test_rettype_long_long_int.$(SOEXT) test_rettype_long_signed.$(SOEXT) \
+       test_rettype_short.$(SOEXT) test_rettype_short_int.$(SOEXT) \
+       test_rettype_signed_char.$(SOEXT) test_rettype_signed_int.$(SOEXT) \
+       test_rettype_signed_long.$(SOEXT) \
+       test_rettype_signed_long_long.$(SOEXT) \
+       test_rettype_signed_short.$(SOEXT) test_rettype_unsigned_char.$(SOEXT) \
+       test_rettype_unsigned_int.$(SOEXT) test_rettype_unsigned_long.$(SOEXT) \
+       test_rettype_unsigned_long_long.$(SOEXT) \
+       test_rettype_unsigned_short.$(SOEXT)
 CFLAGS = -shared -I.. -I../include -Wall -Werror -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
@@ -22,10 +47,34 @@ lib: $(PKGS)
 .c.$(SOEXT):
 	$(CC) -o $@ $(CFLAGS) $< $(LIBS)
 
+SRCS = test_argtype_char.c test_argtype_int.c test_argtype_long.c \
+       test_argtype_long_int.c test_argtype_long_long.c \
+       test_argtype_long_long_int.c test_argtype_long_signed.c \
+       test_argtype_short.c test_argtype_short_int.c \
+       test_argtype_signed_char.c test_argtype_signed_int.c \
+       test_argtype_signed_long.c test_argtype_signed_long_long.c \
+       test_argtype_signed_short.c test_argtype_unsigned_char.c \
+       test_argtype_unsigned_int.c test_argtype_unsigned_long.c \
+       test_argtype_unsigned_long_long.c test_argtype_unsigned_short.c \
+       test_rettype_char.c test_rettype_int.c test_rettype_long.c \
+       test_rettype_long_int.c test_rettype_long_long.c \
+       test_rettype_long_long_int.c test_rettype_long_signed.c \
+       test_rettype_short.c test_rettype_short_int.c \
+       test_rettype_signed_char.c test_rettype_signed_int.c \
+       test_rettype_signed_long.c test_rettype_signed_long_long.c \
+       test_rettype_signed_short.c test_rettype_unsigned_char.c \
+       test_rettype_unsigned_int.c test_rettype_unsigned_long.c \
+       test_rettype_unsigned_long_long.c test_rettype_unsigned_short.c
+
+$(SRCS): test_h2yog.py
+	$(PYTHON) test_h2yog.py
+
 clean:
 	find . -name "core*" -print0 | xargs -0 rm -f
 	find . -name "*.pyc" -print0 | xargs -0 rm -f
 	find . -name "*.so" -print0 | xargs -0 rm -f
+	rm -rf $(SRCS)
+	echo $(SRCS) | sed -e 's/\.c/.h/g' | xargs rm -f
 
 distclean:
 	$(MAKE) clean
