--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -34,7 +34,8 @@ PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
        test_rettype_signed_short.$(SOEXT) test_rettype_unsigned_char.$(SOEXT) \
        test_rettype_unsigned_int.$(SOEXT) test_rettype_unsigned_long.$(SOEXT) \
        test_rettype_unsigned_long_long.$(SOEXT) \
-       test_rettype_unsigned_short.$(SOEXT) test_rettype_voidp.$(SOEXT)
+       test_rettype_unsigned_short.$(SOEXT) test_rettype_voidp.$(SOEXT) \
+       test_struct70.$(SOEXT) test_union70.$(SOEXT)
 CFLAGS = -shared -I.. -I../include -Wall -Werror -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
