--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -8,7 +8,8 @@ PYTHON = @PYTHON@
 PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
        test_lib.$(SOEXT) test_Struct690.$(SOEXT) test_Struct700.$(SOEXT) \
        test_Struct720.$(SOEXT) test_Struct730.$(SOEXT) test_Struct740.$(SOEXT) \
-       test_Struct705.$(SOEXT) test_Union030.$(SOEXT) test_Union040.$(SOEXT) \
+       test_Struct705.$(SOEXT) test_Struct770.$(SOEXT) test_Struct810.$(SOEXT) \
+       test_Struct830.$(SOEXT) test_Union030.$(SOEXT) test_Union040.$(SOEXT) \
        test_Union050.$(SOEXT) empty.$(SOEXT) test_func0.$(SOEXT) \
        test_func10.$(SOEXT) test_func20.$(SOEXT) test_func30.$(SOEXT) \
        test_func40.$(SOEXT) test_func50.$(SOEXT) test_func60.$(SOEXT) \
@@ -35,7 +36,10 @@ PKGS = test_package4.$(SOEXT) test_package5.$(SOEXT) test_package6.$(SOEXT) \
        test_rettype_unsigned_int.$(SOEXT) test_rettype_unsigned_long.$(SOEXT) \
        test_rettype_unsigned_long_long.$(SOEXT) \
        test_rettype_unsigned_short.$(SOEXT) test_rettype_voidp.$(SOEXT) \
-       test_struct70.$(SOEXT) test_union70.$(SOEXT)
+       test_struct70.$(SOEXT) test_union70.$(SOEXT) test_bit_1.$(SOEXT) \
+       test_bit_2.$(SOEXT) test_bit_31.$(SOEXT) test_bit_32.$(SOEXT) \
+       test_ubit_1.$(SOEXT) test_ubit_2.$(SOEXT) test_ubit_31.$(SOEXT) \
+       test_ubit_32.$(SOEXT) arch32/test_Struct400.$(SOEXT)
 CFLAGS = -shared -I.. -I../include -Wall -Werror -DGENERATIONAL @CFLAGS@
 LIBS = @IMPORT_LIB@
 
