--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -8,6 +8,8 @@ components:
   name: doc
 - !ditz.rubyforge.org,2008-03-06/component 
   name: misc
+- !ditz.rubyforge.org,2008-03-06/component 
+  name: lib
 releases: 
 - !ditz.rubyforge.org,2008-03-06/release 
   name: 0.0.1
