Improved native functions in FFI to accept a variable argument such as "*args".

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -90,6 +90,9 @@ dict.inc: dict.yg yg2inc.yg
 symbol.inc: symbol.yg yg2inc.yg
 	$(YOG) yg2inc.yg symbol.yg $@
 
+callable.inc: callable.yg yg2inc.yg
+	$(YOG) yg2inc.yg callable.yg $@
+
 $(top_srcdir)/include/yog/token.h parser.c: parser.y parser.lt $(LEMON)
 	(cd $(LEMON_DIR); $(MAKE))
 	$(LEMON) header=$(top_srcdir)/include/yog/token.h parser.y
