Added lib/sdl/image.h2yog which is for "libSDL_image.so".

--- a/.gitignore
+++ b/.gitignore
@@ -278,6 +278,7 @@ lib/c/Makefile
 lib/c/Makefile.in
 lib/c/grammar.yg
 lib/sdl.yg
+lib/sdl/image.yg
 libffi/Makefile
 libffi/fficonfig.h
 libffi/include/Makefile
