Added lib/sdl/ttf.h2yog for generating sdl.ttf package.

--- a/.gitignore
+++ b/.gitignore
@@ -279,6 +279,7 @@ lib/c/Makefile.in
 lib/c/grammar.yg
 lib/sdl.yg
 lib/sdl/image.yg
+lib/sdl/ttf.yg
 libffi/Makefile
 libffi/fficonfig.h
 libffi/include/Makefile
