--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,9 @@
 
-SUBDIRS = c
+SUBDIRS = c sdl
+
+bin_SCRIPTS = sdl.yg
+
+include $(top_srcdir)/lib/Makefile.common
 
 DIR = $(prefix)/lib/yog/$(VERSION)
 
