--- a/configure.ac
+++ b/configure.ac
@@ -87,7 +87,7 @@ AM_PATH_PYTHON()
 
 AC_DEFINE_UNQUOTED([PREFIX], ["$prefix"], [Define install directory])
 
-AC_CONFIG_FILES([Makefile doc/Makefile doc/index.html ext/Makefile
+AC_CONFIG_FILES([Makefile bin/Makefile doc/Makefile doc/index.html ext/Makefile
                  ext/Makefile.common ext/concurrent/Makefile ext/uname/Makefile
                  ext/yaml/Makefile ext/zip/Makefile installer.nsi lib/Makefile
                  lib/c/Makefile lib/sdl/Makefile src/Makefile tests/Makefile
