--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -5,14 +5,10 @@ bin_SCRIPTS = sdl.yg
 
 include $(top_srcdir)/lib/Makefile.common
 
-DIR = $(prefix)/lib/yog/$(VERSION)
-
 install:
-	mkdir -p $(DIR)
 	for f in `find . -name "*.yg"`; \
 	do \
-		mkdir -p `dirname $(DIR)/$${f}`; \
-		$(install_sh_DATA) $${f} $(DIR)/$${f}; \
+		$(install_sh_DATA) $${f} $(libdir)/$${f}; \
 	done
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
