--- a/ext/Makefile.common.in
+++ b/ext/Makefile.common.in
@@ -16,7 +16,7 @@ LIBS = @LIBS@ @IMPORT_LIB@
 
 PACKAGE_VERSION = @PACKAGE_VERSION@
 prefix = @prefix@
-libdir = $(prefix)/lib/yog/$(PACKAGE_VERSION)
+libdir = $(DESTDIR)$(prefix)/lib/yog/$(PACKAGE_VERSION)
 
 install_sh = @install_sh@
 install_sh_DATA = $(install_sh) -c -m 644
