--- a/ext/Makefile.common.in
+++ b/ext/Makefile.common.in
@@ -20,5 +20,7 @@ libdir = $(DESTDIR)$(prefix)/lib/yog/$(PACKAGE_VERSION)
 
 install_sh = @install_sh@
 install_sh_DATA = $(install_sh) -c -m 644
+top_builddir = @top_builddir@
+mkdir_p = @mkdir_p@
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab
