Changed the definition of mkdir_p in ext/**/Makefile.
./configure in Tiny Core Linux 3.6 defines mkdir_p as
$(top_builddir)/./install-sh -c -d (it uses install-sh instead of mkdir). So
Makefiles must define top_builddir in them.

--- a/ext/concurrent/Makefile.in
+++ b/ext/concurrent/Makefile.in
@@ -6,6 +6,7 @@ SOEXT = @SOEXT@
 CC = @CC@
 CFLAGS = @CFLAGS@
 SO = $(top_srcdir)/ext/concurrent.$(SOEXT)
+top_builddir = @top_builddir@
 mkdir_p = @mkdir_p@
 
 .PHONY: all clean distclean maintainer-clean install
