--- a/ext/zip/Makefile.in
+++ b/ext/zip/Makefile.in
@@ -4,6 +4,7 @@ include ../Makefile.common
 top_srcdir = @top_srcdir@
 SO = $(top_srcdir)/ext/zip.$(SOEXT)
 LIBS = -lzip
+top_builddir = @top_builddir@
 mkdir_p = @mkdir_p@
 
 OBJS = zip.$(OBJEXT)
