--- a/ext/uname/Makefile.in
+++ b/ext/uname/Makefile.in
@@ -6,6 +6,8 @@ SOEXT = @SOEXT@
 CC = @CC@
 SO = $(top_srcdir)/ext/uname.$(SOEXT)
 top_builddir = @top_builddir@
+SHELL = @SHELL@
+mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 mkdir_p = @mkdir_p@
 
 .PHONY: all clean distclean maintainer-clean install
