--- a/ext/yaml/Makefile.in
+++ b/ext/yaml/Makefile.in
@@ -5,6 +5,8 @@ top_srcdir = @top_srcdir@
 SO = $(top_srcdir)/ext/yaml.$(SOEXT)
 LIBS = -lsyck
 top_builddir = @top_builddir@
+SHELL = @SHELL@
+mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 mkdir_p = @mkdir_p@
 
 OBJS = yaml.$(OBJEXT)
